[package]
name = "merlinus"
version = "0.1.0"
authors = ["Cameron Wong <camtech075@gmail.com>"]
edition = '2018'

[lib]
name = "merlinus_internal"
path = "src/lib.rs"

[[bin]]
name = "merlinus"
path = "src/main.rs"

[dependencies]
subprocess = "0.1.18"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_test = "1.0"
thiserror = "1.0.19"
anyhow = "1.0.31"
daggy = "0.7.0"

